templates/vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Custom VPC with Public/Private Subnets, NAT Gateways for ECS Fargate

Parameters:
  AppName:
    Type: String
    Default: image-app

Resources:
# VPC
  ImageAppVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-vpc"

# Internet Gateway
  ImageAppIGW:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ImageAppVPC
      InternetGatewayId: !Ref ImageAppIGW

# Subnets & Associations
  IAPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ImageAppVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-public-subnet-1"

  IAPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ImageAppVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-public-subnet-2"

  IAPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ImageAppVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-private-subnet-1"

  IAPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ImageAppVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-private-subnet-2"

  IAPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ImageAppVPC

  IAPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref IAPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ImageAppIGW

  IAPublicSubnet1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref IAPublicSubnet1
      RouteTableId: !Ref IAPublicRouteTable

  IAPublicSubnet2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref IAPublicSubnet2
      RouteTableId: !Ref IAPublicRouteTable

# Elastic IPs
  EIP1:
    Type: AWS::EC2::EIP

  EIP2:
    Type: AWS::EC2::EIP

# Network Address Translation (NAT) Gateway
  NATGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      SubnetId: !Ref IAPublicSubnet1

  NATGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP2.AllocationId
      SubnetId: !Ref IAPublicSubnet2

# Private Subnets Associations
  IAPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ImageAppVPC

  IAPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref IAPrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1

  IAPrivateSubnet1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref IAPrivateSubnet1
      RouteTableId: !Ref IAPrivateRouteTable1

  IAPrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ImageAppVPC

  IAPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref IAPrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2

  IAPrivateSubnet2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref IAPrivateSubnet2
      RouteTableId: !Ref IAPrivateRouteTable2

Outputs:
  VPCId:
    Value: !Ref ImageAppVPC
  PublicSubnet1Id: 
    Value: !Ref IAPublicSubnet1
  PublicSubnet2Id: 
    Value: !Ref IAPublicSubnet2
  PrivateSubnet1Id: 
    Value: !Ref IAPrivateSubnet1
  PrivateSubnet2Id: 
    Value: !Ref IAPrivateSubnet2
